# pycatia

./: .gitignore  api_builder.py  pycatia-exe.py  pyproject.toml  setup.py
docs/: conf.py  generate_api.py
examples/: auto_cast_example.py  example__assembly_convertor__001.py  example__bom_custom_001.py  example__constraints_001.py  example__document__001.py  example__document__002.py  example__document__003.py  example__drafting__001.py  example__drafting__002.py  example__drafting__003.py  example__human_modelling__001.py  example__hybrid_bodies__001.py  example__hybrid_shape_factory__001.py  example__hybrid_shape_factory__002.py  example__hybrid_shape_factory__003.py  example__hybrid_shape_factory__004.py  example__hybrid_shape_factory__005.py  example__hybrid_shape_factory__006.py  example__hybrid_shape_factory__shape_factory__001.py  example__hybrid_sketch__shape_factory__001.py  example__inertia__001.py  example__license_settings__001.py  example__logging__001.py  example__material__001.py  example__message_box__001.py  example__parameters__001.py  example__parameters__002.py  example__part_hole__001.py  example__product__001.py  example__product__002.py  example__product__003.py  example__product__004.py  example__product__005.py  example__product__006.py  example__selection__001.py  example__selection__002.py  example__selection__003.py  example__shape_factory__001.py  example__shape_factory__002.py  example__space_analysis__001.py  (+4 more)
pycatia/: __init__.py  cat_logger.py
pycatia/abq_automation_interfaces/: abq_analysis_case.py  abq_analysis_cases.py  abq_analysis_model.py  abq_analytical_rigid_surface.py  abq_boundary_condition.py  abq_boundary_conditions.py  abq_clamp_bc.py  abq_concentrated_force.py  abq_damper_connection_property.py  abq_data_output_request.py  abq_data_output_requests.py  abq_displacement_bc.py  abq_display_group.py  abq_display_groups.py  abq_explicit_dynamics_step.py  abq_fastened_connection_enhancement.py  abq_fastened_pair.py  abq_field_output_request.py  abq_field_output_requests.py  abq_fields.py  abq_film_condition.py  abq_frequency_step.py  abq_gasket_property.py  abq_general_static_step.py  abq_global_element_assignment.py  abq_gravity.py  abq_heat_transfer_step.py  abq_history_output_request.py  abq_history_output_requests.py  abq_image_query.py  abq_initial_step.py  abq_initial_temperature.py  abq_interaction.py  abq_interactions.py  abq_job.py  abq_jobs.py  abq_load.py  abq_loads.py  abq_mass_scaling.py  abq_mass_scalings.py  (+31 more)
pycatia/base_interfaces/: context.py  (+2 more)
tests/: create_source_functional_system.py  create_source_parts.py  helper_functions.py  setup.py  source_files.py
user_scripts/: coords_relative_to_axis_system.py  create_bounding_box.py  create_lines_normal_to_surface.py  create_parameters_from_yaml.py  create_screenshots_of_parts_and_products.py  drawing_template.py  rename_instances_in_product.py  save_drawings_to_pdf.py  wing_surface_from_naca_profile.py
(+1119 files in other folders)
