[project]
name = "pycatia"
version = "0.1.0"
description = "A Python library for interacting with CATIA V5."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Paul Bourne", email = "evereux@gmail.com" },
    { name = "Ultranity", email = "zjy1095429904@sina.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["catia", "cad", "automation", "v5"]

dependencies = []

[project.urls]
Homepage = "https://github.com/ultranity/pycatia"
Repository = "https://github.com/ultranity/pycatia"
"Bug Tracker" = "https://github.com/ultranity/pycatia/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "pycatia/__init__.py"

[tool.uv]
# By default, UV will use the public PyPI index.
# You can configure alternative sources if needed.
# Example:
# [[tool.uv.sources]]
# name = "private-index"
# url = "https://private.pypi.org/simple"

[tool.uv.scripts]
lint = "ruff check ."
format = "ruff format ."
check = [
    "ruff check . --diff",
    "ruff format . --check"
]
test = "pytest" # Assuming pytest is used for testing

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 88
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes, pycodestyle, and isort rules by default.
select = ["E", "F", "W", "I"]
ignore = ["E501","E722"]

# Allow autofix for all enabled rules (when `--fix`) is used.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"